--- a/style.css
+++ b/style.css
@@ -39,9 +39,12 @@ body {
     height: 260px;
     position: relative;
     margin: 20px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .playground {
