--- a/style.css
+++ b/style.css
@@ -35,13 +35,16 @@ body {
 }
 
 .control {
-    display: grid;
     width: 320px;
     height: 260px;
     position: relative;
     margin: 20px;
+    margin-top: 20px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .playground {
@@ -284,6 +287,7 @@ body {
 }
 
 .button {
+    width: 50%;
     position: relative;
     background: white;
     border: 2px solid #ffc55b;
